manifest/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-poc
spec:
  hosts:
  - "jwt.gateway.k8s.local"
  gateways:
  - poc-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: httpbin
        port:
          number: 8080
